--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="/img/logo.png">
+                <img src="/logo.png">
             </div>
             <ul>
                 <li><a href="home.html">Home</a></li>
