--- a/Index.html
+++ b/Index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Shopping Site</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/utils.css">
-    <link rel="stylesheet" href="/responsive.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="utils.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="/logo.png">
+                <img src="logo.png">
             </div>
             <ul>
                 <li><a href="home.html">Home</a></li>
